hellom210-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellom210-service
spec:
  selector:
    app: hellom210
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
